Fix spacing of eye-icon styles code

--- a/styles.css
+++ b/styles.css
@@ -151,9 +151,10 @@ body {
   border-bottom-right-radius: 100px;
   padding-left: 10px;
   padding-top: 15px;
-  display: none;/* Hide when sidebar shows */
-  position: fixed;
-  top: 530px;
+  display: none; /* Hide when sidebar shows */
+  position: absolute;
+  top: 535px;
+  cursor: pointer;
 }
 
 /* Hide Sidebar */
@@ -539,7 +540,7 @@ textarea {
   }
 
   .nav-eyes {
-    display: none;
+    display: none !important;
   }
 
   .favicon-mobile {
